# pycolore-sso

./: .gitignore  README.md  deps.edn  pyproject.toml
src/: pages.clj  server.clj
sso/: pages.hy  server.hy
sso/assets/: style.css
