[tool.poetry]
name = "sso"
version = "0.1.0"
description = ""
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
hyccup = "^1.0.0-alpha.3"
starlette = "^0.16.0"
python-multipart = "^0.0.5"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
