[tool.poetry]
name = "sso"
version = "0.1.0"
description = ""
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.10"
hyccup = "^1.0.0-alpha.4"
starlette = "^0.16.0"
python-multipart = "^0.0.5"
uvicorn = "^0.15.0"
supabase = "^0.5.3"
python-dotenv = "^0.20.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
